K8/be-hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
        - name: hello-service
          image: "ankuronlyme/sample_hello:v1"
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3001
              protocol: TCP
