K8/be-profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
    spec:
      containers:
        - name: profile-service
          image: "ankuronlyme/sample_profile:v1"
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3002
              protocol: TCP
