K8/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "ankuronlyme/sample_frontend:v1"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
