K8/be-hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service-svc
spec:
  type: ClusterIP
  selector:
    app: hello-service
  ports:
  - port: 80
    targetPort: 3001
