K8/be-profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service-svc
spec:
  type: ClusterIP
  selector:
    app: profile-service
  ports:
  - port: 80
    targetPort: 3002
